@@ -1,5 +1,9 @@
 2008-05-19  Sam Steingold  <sds@gnu.org>
 
+	* modules/syscalls/calls.c (%FGETC, %FPUTC, %UNGETC): add for testing
+
+2008-05-19  Sam Steingold  <sds@gnu.org>
+
 	* lispbibl.d (mark_fp_valid): export to clisp.h
 	* modules/syscalls/calls.c (%STDIO, my_stdin, my_stdout)
 	(my_stderr, init_stdio) [HAVE_FFI]: add
